--- a/index.html
+++ b/index.html
@@ -2450,7 +2450,9 @@ body.wm-modal #donato #donato-base {
     <h1 class="secondary" id="2-3-april-2023/4">2-3 April 2023/4</h1>
 
 <div class="aside">
-    <h2><i class="bi bi-calendar3"></i> Event timeline</h2>
+
+  
+    <h2>Event timeline</h2>
     <dl>
         
             <dt>22 February 2023/4</dt>
